fix overflow

--- a/public/css/scoreboard.css
+++ b/public/css/scoreboard.css
@@ -277,6 +277,7 @@ html {
 	left: 150px;
 	padding: 0 5px;
 	border-radius: 10px;
+    overflow: hidden;
 }
 
 #goalAnimationWrapper {
